# mcp-newbuild

./: .coverage  .env.example  CHANGELOG.md  Dockerfile  README.md  glama.json  pyproject.toml  server.json
src/mcp_newbuild/: __init__.py  client.py  config.py  errors.py  server.py
tests/: test_cli.py  test_client.py  test_server.py
