[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atomno-mcp-newbuild"
version = "0.1.4"
description = "MCP server: check Russian new-build developers and projects from the official ЕИСЖС/наш.дом.рф data (214-ФЗ) — developer profile, project declaration, escrow scheme, construction permit with deadline-shift history, catalogue of buildings under construction, and a deterministic developer risk summary (advisory)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "atomno-mcp", email = "hello@atomno.ru" }]
keywords = [
  "mcp",
  "model-context-protocol",
  "new-buildings",
  "real-estate",
  "developer-check",
  "eisgs",
  "dom-rf",
  "214-fz",
  "escrow",
  "russia",
  "atomno",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Russian",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Typing :: Typed",
]

dependencies = [
  "fastmcp>=2.0.0,<4.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.6.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "respx>=0.21.1",
  "ruff>=0.5.0",
]
release = [
  "build>=1.2.0",
  "twine>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/atomno-mcp/mcp-newbuild"
Repository = "https://github.com/atomno-mcp/mcp-newbuild"
Issues = "https://github.com/atomno-mcp/mcp-newbuild/issues"
Changelog = "https://github.com/atomno-mcp/mcp-newbuild/blob/main/CHANGELOG.md"
Documentation = "https://atomno-mcp.ru/mcp/newbuild"

[project.scripts]
atomno-mcp-newbuild = "mcp_newbuild.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_newbuild"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501", "B008"]
